# blender-mcp-antigravity

./: .gitignore  LICENSE  README.md  mcp_config_example.json  pyproject.toml
how_to_install/: index.html  style.css
src/blender_mcp/: server.py
src/blender_mcp/tools/: __init__.py  bake.py  blueprint.py  gentex.py  material_presets.py  optimize.py  procedural.py  render.py  sculpt.py
