[project]
name = "blender-mcp-merge-antigravity"
version = "2.0.0"
description = "Blender MCP MERGE Antigravity — Extended Blender integration via MCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Antigravity", email = "noreply@antigravity.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "requests>=2.28.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["blender_mcp", "blender_mcp.tools"]
